seeder. pagination sort

--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
+        "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
     },
-    "dependencies": {
-        "vue-loader": "^15.9.8"
-    }
+    "dependencies": []
 }
